<resources>
    <string name="app_name">Quick Notes</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="settings">Settings</string>
    <string name="newNote">New Note</string>
    <string name="editNote">Edit Note</string>
    <string name="backup">Backup</string>
    <string name="exportBackup">Export Backup</string>
    <string name="importBackup">Import Backup</string>
    <string name="customPassword">Use Custom Password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="exportYourNotesTo">Export your notes to&#10;&quot;Download/QuickNotesBackup/&quot;</string>
    <string name="doYouReallyWantToImportThisBackup">Do you really want to import this backup?</string>
    <string name="cancel">Cancel</string>
    <string name="caution">Caution</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="quickNotesMustBeRestartedForTheChangesToTakeEffect">Quick Notes must be restarted for the changes to take effect.</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="trash">Trash</string>
    <string name="restore">Restore</string>
    <string name="doYouWantToDeleteThisNoteOrRestoreItFromTrash">Do you want to delete this note or restore it from trash?</string>
    <string name="success">Success</string>
    <string name="notes">Notes</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="school">School</string>
    <string name="specialdays">Special Days</string>
    <string name="unnamed">Unnamed</string>
    <string name="all">All</string>
    <string name="exportDate">Export Date</string>
    <string name="Import">Import</string>
    <string name="category">Category</string>
    <string name="saved">Saved</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome</string>
    <string name="error">Error</string>
    <string name="customizeCategoryNames">Customize Category Names</string>
    <string name="sideMenu">Side Menu</string>
    <string name="showFavorites">Show Favorites</string>
    <string name="showHideDateAndTime">Show/Hide Date And Time</string>
    <string name="title">Title...</string>
    <string name="writeYourNoteHere">Write your note here...</string>
    <string name="tutorialCompleted">Tutorial Completed</string>
    <string name="theUnfinishedNoteHasbeenRestored">The unfinished note has been restored!</string>
    <string name="notedAt">Noted at</string>
    <string name="lastEditAt">Last Edit At</string>
    <string name="somethingWentWrong">Something went wrong!</string>
    <string name="noteOrTitleCantBeEmpty">Note or Title can\'t be empty!</string>
    <string name="hideInfo">Hide Info</string>
    <string name="showInfo">Show Info</string>
    <string name="titleLines">Title Lines</string>
    <string name="noteLines">Note Lines</string>
    <string name="titleLetters">Title Letters</string>
    <string name="noteLetters">Note Letters</string>
    <string name="changeInfo">Change Info</string>
    <string name="goBack">Go Back</string>
    <string name="favorite">Favorite</string>
    <string name="noteMenu">Note Menu</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="disableAnimations">Disable Animations</string>
    <string name="onlySelectFilesWithThedbExtension">Only select files with the .db extension</string>
    <string name="deleteAllNotes">Delete All Notes</string>
    <string name="areYouSureYouWantToDeleteAllNotesThisActionCannotBeUndoneToConfirmLongClickTheConfirmButton">Are you sure you want to delete all notes? This action cannot be undone.&#10;To confirm, long click the &quot;CONFIRM&quot; button.</string>
    <string name="longClick">Long Click!</string>
    <string name="allNotesDeletedSuccessfully">All Notes Deleted Successfully</string>
    <string name="successfullyImported">Successfully Imported</string>
    <string name="incompatibleFileOnlyUsedbFiles">Incompatible file, only use .db files!</string>
    <string name="clearTrash">Clear Trash</string>
    <string name="doYouWantToClearTrashFolderThisOperationCantBeUndone">Do you want to clear trash folder?&#10;This operation can\'t be undone!</string>
    <string name="allTrashedNotesDeleted">All trashed notes deleted</string>
    <string name="howToUseTheApp">How to use the app?</string>
    <string name="quickNotesIsUserFriendlyAndSimpleAppTutorialWillTeachBasicUsageOfTheAppYouCanStartTutorialByPressingButtonBelow">Quick Notes is user friendly and simple app. Tutorial will teach basic usage of the app. You can start tutorial by pressing button below.</string>
    <string name="startTutorial">Start Tutorial</string>
    <string name="trashedNotes">Trashed Notes</string>
    <string name="categoryShowcase">Category Showcase</string>
    <string name="editCategoryNames">Edit Category Names</string>
    <string name="w2025WizzyAppsAllRightsReserved">2025 WizzyApps. All rights reserved.</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="licenses">Licenses</string>
    <string name="shareApp">Share App</string>
    <string name="fromHereYouCanCustomizeCategoryNames">From here, you can customize category names.</string>
    <string name="showFavoriteNotes">Show Favorite Notes</string>
    <string name="youCanViewYourFavoriteNotesHere">You can view your favorite notes here.</string>
    <string name="toggleToShowOrHideTheDateAndTimeOnYourNotes">Toggle to show or hide the date and time on your notes.</string>
    <string name="searchInNotes">Search in Notes</string>
    <string name="fromHereYouCanQuicklySearchAndLocateYourNotes">From here, you can quickly search and locate your notes.</string>
    <string name="addNewNotes">Add New Notes</string>
    <string name="createANewNoteByPressingThisButton">Create a new note by pressing this button.</string>
    <string name="saveNote">Save Note</string>
    <string name="hereYouCanSaveNoteAndGoHomeScreen">Here you can save your note and return to the home screen.</string>
    <string name="selectTheCategoryForYourNoteHere">Select the category for your note here.</string>
    <string name="tapHereToAddThisNoteToYourYavorites">Tap here to add this note to your favorites.</string>
    <string name="tapHereToOpenNoteMenu">Tap here to open note menu.</string>
    <string name="device">Device</string>
    <string name="imageToNote">Image To Note (OCR)</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="deleted">Deleted</string>
    <string name="oopsSomethingWentWrong">Oops! Something Went Wrong</string>
    <string name="restart">Restart</string>
    <string name="close">Close</string>
    <string name="pleaseTryAgain">Please, Try Again!</string>
    <string name="noNoteToShare">No Note To Share</string>
    <string name="options">Options</string>
    <string name="selected">Selected</string>
    <string name="joinOurChannel">Join our channel</string>
    <string name="language">Language</string>
    <string name="editDate">Edit Date</string>
    <string name="createDate">Create Date</string>
    <string name="archive">Archive</string>
    <string name="archivedNotes">Archived Notes</string>
    <string name="restoreAllArchivedNotes">This will restore all archived notes.&#10;Do you want to confirm?</string>
    <string name="newVersionFound">New Version Found!</string>
    <string name="newVersion">New Version</string>
    <string name="allArchivedNotesRestored">All archived notes restored.</string>
    <string name="calendar">Calendar</string>
    <string name="goToToday">Go to today</string>
    <string name="autoNoteSaving">Auto Note Saving</string>
</resources>