<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/toolbarBg"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:padding="6dp"
		android:background="@color/colorPrimary"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:animateLayoutChanges="true">
		<ImageView
			android:id="@+id/toolbarBackImage"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:padding="5dp"
			android:src="@drawable/arrow_back_72dp_black"
			android:scaleType="fitCenter"
			android:tint="?attr/colorOnPrimary" />
		<LinearLayout
			android:id="@+id/toolbarTextBg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:gravity="center_vertical"
			android:orientation="vertical"
			android:layout_weight="1">
			<TextView
				android:id="@+id/toolbarTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="1dp"
				android:text="@string/settings"
				android:textSize="20sp"
				android:textStyle="bold"
				android:textColor="@color/colorOnPrimary"
				android:transitionName="settings" />
			<TextView
				android:id="@+id/toolbarSubtitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="1dp"
				android:textSize="16sp"
				android:textColor="@color/colorOnPrimary"
				android:ellipsize="end"
				android:visibility="gone" />
		</LinearLayout>
		<ImageView
			android:id="@+id/toolbarResetImage"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:padding="5dp"
			android:src="@drawable/settings_backup_restore_72dp_black"
			android:scaleType="fitCenter"
			android:tint="?attr/colorOnPrimary" />
	</LinearLayout>
	<ScrollView
		android:id="@+id/settingsScroll"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:overScrollMode="never">
		<LinearLayout
			android:id="@+id/settingsBg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="vertical"
			android:clipChildren="false"
			android:clipToPadding="false"
			android:animateLayoutChanges="true">
			<LinearLayout
				android:id="@+id/backupTitleBg"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/backupTitleText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/backup"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/colorAccent" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/backupBg"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:clipChildren="false"
				android:clipToPadding="false"
				android:visibility="gone">
				<com.google.android.material.button.MaterialButton
					android:id="@+id/exportButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:gravity="center_horizontal|center_vertical"
					android:text="@string/exportBackup"
					android:textSize="16sp"
					android:textColor="@color/colorOnPrimary"
					app:cornerRadius="20dp" />
				<com.google.android.material.button.MaterialButton
					android:id="@+id/importButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:gravity="center_horizontal|center_vertical"
					android:text="@string/importBackup"
					android:textSize="16sp"
					android:textColor="@color/colorOnPrimary"
					app:cornerRadius="20dp" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/themeTitleBg"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/themeTitleText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/app_name"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/colorAccent" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/themeBg"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:orientation="vertical"
				android:animateLayoutChanges="true"
				android:visibility="gone">
				<Switch
					android:id="@+id/disableAnimationsSwitch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:gravity="left|center_vertical"
					android:text="@string/disableAnimations"
					android:textSize="16sp"
					android:textColor="@color/colorOnPrimary" />
				<Spinner
					android:id="@+id/languageSpinner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="4dp"
					android:paddingBottom="4dp"
					android:spinnerMode="dialog"
					tools:listitem="@layout/spinner" />
				<Spinner
					android:id="@+id/sortSpinner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="4dp"
					android:paddingBottom="4dp"
					android:spinnerMode="dropdown"
					tools:listitem="@layout/spinner" />
				<Switch
					android:id="@+id/autoSavingSwitch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:gravity="left|center_vertical"
					android:text="@string/autoNoteSaving"
					android:textSize="16sp"
					android:textColor="@color/colorOnPrimary"
					android:checked="true" />
				<TextView
					android:id="@+id/autoSaveText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="10dp"
					android:paddingTop="2dp"
					android:paddingRight="10dp"
					android:paddingBottom="2dp"
					android:text="⚠️ Auto Note Saving is turned off. Make sure to save your notes manually, or you might lose your changes."
					android:textSize="10sp"
					android:textColor="?colorError"
					android:visibility="gone" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
