<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<eightbitlab.com.blurview.BlurView
		android:id="@+id/blurViewBg"
		android:layout_width="320dp"
		android:layout_height="match_parent"
		android:background="@color/colorPrimaryHalf"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/mainBg"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@android:color/transparent"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/appTitleBackBg"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<LinearLayout
					android:id="@+id/appTitleBg"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"
					android:layout_marginRight="10dp"
					android:padding="4dp"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="vertical"
					android:background="@drawable/rounded_bg"
					android:elevation="5dp">
					<TextView
						android:id="@+id/appTitleText"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/app_name"
						android:textSize="20sp"
						android:textStyle="bold"
						android:textColor="@color/colorOnPrimary" />
				</LinearLayout>
			</LinearLayout>
			<androidx.core.widget.NestedScrollView
				android:id="@+id/vscrollBg"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="2dp">
				<LinearLayout
					android:id="@+id/buttonsBg"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:orientation="vertical">
					<LinearLayout
						android:id="@+id/ocrBg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:id="@+id/ocrImage"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/document_scanner_72dp_black"
							android:scaleType="fitCenter"
							android:tint="?attr/colorOnPrimary" />
						<LinearLayout
							android:id="@+id/ocrTextBg"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="left"
							android:orientation="vertical"
							android:animateLayoutChanges="true">
							<TextView
								android:id="@+id/ocrText"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:padding="8dp"
								android:text="@string/imageToNote"
								android:textSize="16sp"
								android:textColor="@color/colorOnPrimary" />
							<LinearLayout
								android:id="@+id/ocrOptionsBg"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:padding="4dp"
								android:orientation="horizontal"
								android:visibility="gone">
								<TextView
									android:id="@+id/ocrGalleryText"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:padding="4dp"
									android:gravity="center_horizontal|center_vertical"
									android:text="@string/gallery"
									android:textSize="14sp"
									android:layout_weight="1"
									android:background="@drawable/rounded_bg25dp" />
								<TextView
									android:id="@+id/ocrCameraText"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:padding="4dp"
									android:gravity="center_horizontal|center_vertical"
									android:text="@string/camera"
									android:textSize="14sp"
									android:layout_weight="1"
									android:background="@drawable/rounded_bg25dp" />
							</LinearLayout>
						</LinearLayout>
					</LinearLayout>
					<LinearLayout
						android:id="@+id/trashBg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_vertical"
						android:orientation="horizontal"
						android:transitionName="trash">
						<ImageView
							android:id="@+id/trashImage"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/folder_delete_72dp_black"
							android:scaleType="fitCenter"
							android:tint="?attr/colorOnPrimary" />
						<TextView
							android:id="@+id/trashText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/trash"
							android:textSize="16sp"
							android:textColor="@color/colorOnPrimary" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/archiveBg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:id="@+id/archiveImage"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/archive_72dp_black"
							android:scaleType="fitCenter"
							android:tint="?attr/colorOnPrimary" />
						<TextView
							android:id="@+id/archiveText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/archive"
							android:textSize="16sp"
							android:textColor="@color/colorOnPrimary" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/calendarBg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:id="@+id/calendarImage"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/calendar_month_72dp_black"
							android:scaleType="fitCenter"
							android:tint="?attr/colorOnPrimary" />
						<TextView
							android:id="@+id/calendarText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/calendar"
							android:textSize="16sp"
							android:textColor="@color/colorOnPrimary" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/settingsBg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_vertical"
						android:orientation="horizontal"
						android:transitionName="settings">
						<ImageView
							android:id="@+id/settingsImage"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/settings_72dp_black"
							android:scaleType="fitCenter"
							android:tint="?attr/colorOnPrimary" />
						<TextView
							android:id="@+id/settingsText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/settings"
							android:textSize="16sp"
							android:textColor="@color/colorOnPrimary" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/helpBg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_vertical"
						android:orientation="horizontal"
						android:transitionName="help">
						<ImageView
							android:id="@+id/helpImage"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/help_outline_72dp_black"
							android:scaleType="fitCenter"
							android:tint="?attr/colorOnPrimary" />
						<TextView
							android:id="@+id/helpText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/help"
							android:textSize="16sp"
							android:textColor="@color/colorOnPrimary" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/aboutBg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_vertical"
						android:orientation="horizontal"
						android:transitionName="about">
						<ImageView
							android:id="@+id/aboutImage"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/info_outline_72dp_black"
							android:scaleType="fitCenter"
							android:tint="?attr/colorOnPrimary" />
						<TextView
							android:id="@+id/aboutText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/about"
							android:textSize="16sp"
							android:textColor="@color/colorOnPrimary" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/versionBg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="vertical"
						android:visibility="gone">
						<TextView
							android:id="@+id/installedText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="2dp"
							android:text="Installed"
							android:textSize="12sp"
							android:textColor="@color/colorPrimaryHint"
							android:visibility="gone" />
						<TextView
							android:id="@+id/newVersionText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="New Version"
							android:textSize="16sp"
							android:textColor="@color/colorOnPrimary" />
						<TextView
							android:id="@+id/versionInfoText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="New Features"
							android:textSize="12sp"
							android:textStyle="italic"
							android:textColor="@color/colorOnPrimary" />
					</LinearLayout>
				</LinearLayout>
			</androidx.core.widget.NestedScrollView>
		</LinearLayout>
	</eightbitlab.com.blurview.BlurView>
</LinearLayout>
