<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/mainBg"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="8dp"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="vertical"
		android:clipChildren="false"
		android:clipToPadding="false">
		<TextView
			android:id="@+id/titleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/oopsSomethingWentWrong"
			android:textSize="25sp"
			android:textStyle="bold"
			android:textColor="@color/colorOnPrimary" />
		<TextView
			android:id="@+id/logText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="Logs"
			android:textSize="14sp"
			android:textColor="@color/colorOnPrimary"
			android:textIsSelectable="true"
			android:visibility="gone" />
		<LinearLayout
			android:id="@+id/buttonsBg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal"
			android:clipChildren="false"
			android:clipToPadding="false">
			<com.google.android.material.button.MaterialButton
				android:id="@+id/showLogBg"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="Show Log"
				android:textSize="18sp"
				android:textColor="@color/colorOnPrimary"
				android:layout_weight="1"
				app:cornerRadius="15dp" />
			<com.google.android.material.button.MaterialButton
				android:id="@+id/closeBg"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/close"
				android:textSize="18sp"
				android:textColor="@color/colorOnPrimary"
				android:layout_weight="1"
				app:cornerRadius="15dp" />
			<com.google.android.material.button.MaterialButton
				android:id="@+id/restartBg"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/restart"
				android:textSize="18sp"
				android:textColor="@color/colorOnPrimary"
				android:layout_weight="1"
				app:cornerRadius="15dp" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
