<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/toolbarBg"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:padding="6dp"
		android:background="@color/colorPrimary"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:animateLayoutChanges="true">
		<ImageView
			android:id="@+id/toolbarBackImage"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:padding="5dp"
			android:src="@drawable/arrow_back_72dp_black"
			android:scaleType="fitCenter"
			android:tint="?attr/colorOnPrimary" />
		<LinearLayout
			android:id="@+id/toolbarTextBg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:gravity="center_vertical"
			android:orientation="vertical"
			android:layout_weight="1">
			<TextView
				android:id="@+id/toolbarTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="1dp"
				android:text="@string/about"
				android:textSize="20sp"
				android:textStyle="bold"
				android:textColor="@color/colorOnPrimary"
				android:singleLine="true"
				android:ellipsize="end"
				android:transitionName="about" />
			<TextView
				android:id="@+id/toolbarSubtitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="1dp"
				android:textSize="16sp"
				android:textColor="@color/colorOnPrimary"
				android:singleLine="true"
				android:ellipsize="end"
				android:visibility="gone" />
		</LinearLayout>
		<ImageView
			android:id="@+id/toolbarChannelImage"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:padding="5dp"
			android:src="@drawable/comment_72dp_black"
			android:scaleType="fitCenter"
			android:tint="?attr/colorOnPrimary" />
		<ImageView
			android:id="@+id/toolbarShareAppImage"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:padding="5dp"
			android:src="@drawable/share_72dp_black"
			android:scaleType="fitCenter"
			android:tint="?attr/colorOnPrimary" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/topBg"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:paddingLeft="8dp"
		android:paddingTop="50dp"
		android:paddingRight="8dp"
		android:paddingBottom="8dp"
		android:gravity="center_horizontal"
		android:orientation="vertical">
		<TextView
			android:id="@+id/appNameText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="8dp"
			android:paddingTop="8dp"
			android:paddingRight="8dp"
			android:paddingBottom="4dp"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/app_name"
			android:textSize="40sp"
			android:textStyle="bold"
			android:textColor="@color/colorOnPrimary" />
		<TextView
			android:id="@+id/wizzyAppsText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/w2025WizzyAppsAllRightsReserved"
			android:textSize="16sp"
			android:textStyle="bold|italic"
			android:textColor="@color/colorOnPrimary" />
		<TextView
			android:id="@+id/versionText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="4dp"
			android:text="Version 1.0"
			android:textSize="18sp"
			android:textStyle="italic"
			android:textColor="@color/colorPrimaryHint" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/licensesBg"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:animateLayoutChanges="true"
		android:clipChildren="false"
		android:clipToPadding="false">
		<LinearLayout
			android:id="@+id/licensesUpBg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			android:animateLayoutChanges="true">
			<TextView
				android:id="@+id/licensesText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/licenses"
				android:textSize="18sp"
				android:textColor="@color/colorOnPrimary"
				android:layout_weight="1" />
			<ImageView
				android:id="@+id/licensesImage"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:src="@drawable/arrow_drop_down_72dp_black"
				android:scaleType="fitCenter" />
		</LinearLayout>
		<ListView
			android:id="@+id/licensesList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:padding="15dp"
			android:choiceMode="none"
			android:visibility="gone"
			android:background="@drawable/rounded_bg25dp" />
		<com.google.android.material.button.MaterialButton
			android:id="@+id/privacyPolicyButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:padding="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/privacyPolicy"
			android:textSize="18sp"
			android:textColor="@color/colorOnPrimary"
			app:cornerRadius="15dp"
			android:textAllCaps="false" />
	</LinearLayout>
</LinearLayout>
